--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- 🌐 Кнопка переходу на сайт магазину -->
 <div class="shop-link">
   <a href="https://613.com.ua" target="_blank" class="shop-btn">
-    🌐 Перейти на сайт магазину
+    🌐 Наш магазин
   </a>
 </div>
       </div>
