--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container header-inner">
       <div class="brand">
         <img src="5208922021922803003_121.jpg" alt="логотип" class="logo" />
+        <img src="5192788544207323310_121.jpg" alt="Шини та диски" class="hero-img" />
         <div class="brand-text">
           <h1>СТО «Шиномонтаж»</h1>
           <p class="tagline">Service &amp; Tires — Бровари</p>
@@ -58,7 +59,14 @@
 
     <section id="about" class="card">
       <h3>Про нас</h3>
-      <p>СТО «Шиномонтаж» — команда фахівців з багаторічним досвідом. Працюємо з високоякісними шинами та дисками, пропонуємо експрес-обслуговування та гарантійний сервіс.</p>
+      <p> Чи знаєте ви, що робити, коли світло зникає, а колеса потребують термінового ремонту?
+Ми – працюємо НАВІТЬ ПІД ЧАС ВІДКЛЮЧЕНЬ ЕЛЕКТРОЕНЕРГІЇ! Завдяки власному генератору ми не зупиняємося ні на мить. Ваш автомобіль буде готовий до дороги за лічені хвилини, незалежно від графіка "відключалок"!
+Без черг – тільки швидкість і комфорт!
+Забудьте про години очікування в інших СТО. У нас індивідуальний підхід: приїжджаєте – і одразу до справи! Швидка заміна шин, балансування, ремонт проколів, бокових порізів– все робимо професійно та з гарантією якості. Використовуємо тільки оригінальні матеріали від провідних брендів.
+
+Зручне розташування: місто Бровары. Січових Стрільців 1 (територія автопарку, навпроти "Макрохіму") 
+Не ризикуйте безпекою на дорозі – телефонуйте зараз!
+        СТО «Шиномонтаж» — команда фахівців з багаторічним досвідом. Працюємо з високоякісними шинами та дисками, пропонуємо експрес-обслуговування та гарантійний сервіс.</p>
     </section>
 
     <section id="map" class="card">
@@ -74,9 +82,11 @@
 
     <section id="more" class="card">
       <h3>Опис послуг</h3>
-      <p><strong>Шиномонтаж:</strong> монтаж/демонтаж, балансування, сезонна заміна. <strong>Продаж:</strong> підбір шин і дисків за параметрами автомобіля. <strong>АКБ:</strong> підбір, діагностика, заміна. <strong>Ремонт дисків:</strong> правка, фарбування, покриття.</p>
+      <p><strong>Шиномонтаж:</strong> монтаж/демонтаж, балансування, сезонна заміна.
+        <strong>Продаж:</strong> підбір шин і дисків за параметрами автомобіля.
+        <strong>АКБ:</strong> підбір, діагностика, заміна.
+        <strong>Ремонт дисків:</strong> правка, фарбування, покриття.</p>
     </section>
-
     <footer class="card footer">
       <div>© СТО «Шиномонтаж», м. Бровари</div>
       <div>Тел: <a href="tel:+380975501200">+38 (097) 550-12-00</a> • e-mail: <a href="mailto:tata_613@ukr.net">tata_613@ukr.net</a></div>
